@@ -3,14 +3,14 @@ Type: Package
 Title: Annotation of Genetic Variants 
 Description: Annotate variants, compute amino acid coding changes, 
 	predict coding outcomes
-Version: 1.5.30
+Version: 1.5.31
 Author: Valerie Obenchain, Martin Morgan, Michael Lawrence with
 	contributions from Stephanie Gogarten. 
 Maintainer: Valerie Obenchain <vobencha@fhcrc.org> 
 License: Artistic-2.0 
 biocViews: DataImport, Sequencing, HighThroughputSequencing, SNP, Annotation, 
 	Genetics, Homo_sapiens
-Depends: R (>= 2.8.0), methods, BiocGenerics, GenomicRanges (>= 1.9.56), 
+Depends: R (>= 2.8.0), methods, BiocGenerics, GenomicRanges (>= 1.11.27), 
 	Rsamtools (>= 1.11.7), IRanges (>= 1.17.4)
 Imports: methods, BiocGenerics, IRanges, Biostrings, Biobase, 
 	Rsamtools (>= 1.9.4), AnnotationDbi (>= 1.17.11),
