@@ -6,8 +6,7 @@ setClass("VCF",
     contains=c("VIRTUAL", "SummarizedExperiment"),
     representation(
         fixed="DataFrame",
-        info="DataFrame"
-    )
+        info="DataFrame")
 )
 
 setClass("CollapsedVCF", contains="VCF") ## ALT is DNAStrinsSetList
@@ -80,9 +79,9 @@ setAs("CollapsedVCF", "SummarizedExperiment",
         if (nrow(ffld) != xlen)
             return(paste("'fixed(object)' and 'rowData(object) must have the same ",
                    "number of rows", sep=""))
-        if (!all(nms %in% c("paramRangeID", "REF", "ALT", "QUAL", "FILTER")))
-            return(paste("'fixed(object)' colnames must be ",
-                   "'REF', 'ALT', 'QUAL' and 'FILTER'", sep=""))
+#        if (!all(nms %in% c("paramRangeID", "REF", "ALT", "QUAL", "FILTER")))
+#            return(paste("'fixed(object)' colnames must be ",
+#                   "'REF', 'ALT', 'QUAL' and 'FILTER'", sep=""))
         if ("REF" %in% nms) 
             if (!is(ffld$REF, "DNAStringSet"))
                 return("'ref(object)' must be a DNAStringSet")
